Make all version latest

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^7.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
